Home Page update1

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
 
 
                 <li><a class="nav__link" href="https://naman28.github.io/">About</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/code.html">Code</a></li>
+                <!-- <li><a class="nav__link" href="https://naman28.github.io/pages/code.html">Code</a></li>
                 <li><a class="nav__link" href="https://naman28.github.io/pages/contact.html">Contact</a></li>
                 <li><a class="nav__link" href="https://naman28.github.io/pages/funding.html">Funding</a></li>
                 <li><a class="nav__link" href="https://naman28.github.io/pages/publications.html">Publications</a></li>
                 <li><a class="nav__link" href="https://naman28.github.io/pages/research.html">Research</a></li>
                 <li><a class="nav__link" href="https://naman28.github.io/pages/students.html">Students</a></li>
                 <li><a class="nav__link" href="https://naman28.github.io/pages/talks.html">Talks</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/teaching.html">Teaching</a></li>
+                <li><a class="nav__link" href="https://naman28.github.io/pages/teaching.html">Teaching</a></li> -->
 
         </ul>
     </nav>
@@ -134,7 +134,7 @@
 <h3>Bio and Background</h3>
 <p>I am a Master's student in the <a href="http://www.cse.iitk.ac.in/">Department of Computer Science and Engineering</a> at the <a href="http://www.iitk.ac.in/">Indian Institute of Technology, Kanpur</a>.</p>
 <p><a href="https://naman28.github.io/docs/naman_cv.pdf">[CV]</a> (PDF)
-<h3>News</h3>
+<!-- <h3>News</h3> -->
     </section>
 </article>
 
