Home Page update2

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
     <p class="social">
     </p>
 
-        <h2>Categories</h2>
+        <!-- <h2>Categories</h2>
         <ul class="navbar">
                 <li><a href="https://naman28.github.io/category/blog.html">Blog</a></li>
-        </ul>
+        </ul> -->
 
 
 </aside>
