--- a/pages/projects.html
+++ b/pages/projects.html
@@ -63,25 +63,24 @@
 })('__REQUESTLY__')</script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <!-- Site Meta Data -->
-        <title>About</title>
+        <title>Students</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="Naman">
 
-        <link rel="shortcut icon" href="https://naman28.github.io/">
+        <link rel="shortcut icon" href="https://naman28.github.iopages/projects.html">
 
         <!-- schema.org -->
         <meta itemprop="name" content="Naman&#39;s Webpage ">
         <meta itemprop="image" content="">
         <meta itemprop="description" content="">
 
-        <link href="./About_files/css" rel="stylesheet" type="text/css">
+        <link href="./Students_files/css" rel="stylesheet" type="text/css">
         <!-- Style Meta Data -->
-        <link rel="stylesheet" href="./About_files/style.css" type="text/css">
-        <link rel="stylesheet" href="./About_files/pygments.css" type="text/css">
+        <link rel="stylesheet" href="./Students_files/style.css" type="text/css">
+        <link rel="stylesheet" href="./Students_files/pygments.css" type="text/css">
 
         <!-- Feed Meta Data -->
-  
 
         <!-- Twitter Feed -->
         <meta name="twitter:card" content="summary">
@@ -92,6 +91,7 @@
 <body data-gr-c-s-loaded="true">
 <!-- Sidebar -->
 <aside>
+    <!--<center><a href="https://www.cse.iitk.ac.in/users/spramod"><img id="avatar" src=""></a></center>-->
     <h1>Naman's Webpage </h1>
     <br>
 
@@ -100,15 +100,15 @@
         <ul class="list-bare">
 
 
-                <li><a class="nav__link" href="https://naman28.github.io/">About</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/projects.html">Projects</a></li>
-                <!-- <li><a class="nav__link" href="https://naman28.github.io/pages/contact.html">Contact</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/funding.html">Funding</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/publications.html">Publications</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/research.html">Research</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/students.html">Students</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/talks.html">Talks</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/teaching.html">Teaching</a></li> -->
+                <li><a class="nav__link" href="https://naman28.github.io">About</a></li>
+                <li><a class="nav__link" href="https://naman28.github.iopages/projects.html">Projects</a></li>
+                <!-- <li><a class="nav__link" href="https://naman28.github.iopages/contact.html">Contact</a></li>
+                <li><a class="nav__link" href="https://naman28.github.iopages/funding.html">Funding</a></li>
+                <li><a class="nav__link" href="https://naman28.github.iopages/publications.html">Publications</a></li>
+                <li><a class="nav__link" href="https://naman28.github.iopages/research.html">Research</a></li>
+                <li><a class="nav__link" href="https://naman28.github.iopages/students.html">Students</a></li>
+                <li><a class="nav__link" href="https://naman28.github.iopages/talks.html">Talks</a></li>
+                <li><a class="nav__link" href="https://naman28.github.iopages/teaching.html">Teaching</a></li> -->
 
         </ul>
     </nav>
@@ -118,7 +118,7 @@
 
         <!-- <h2>Categories</h2>
         <ul class="navbar">
-                <li><a href="https://naman28.github.io/category/blog.html">Blog</a></li>
+                <li><a href="https://naman28.github.iocategory/blog.html">Blog</a></li>
         </ul> -->
 
 
@@ -128,24 +128,46 @@
 <article>
     <section id="content" class="body">
 
-        <h1>Naman's Homepage</h1>
-<p><img style="float:right" src="./About_files/naman.png" alt="Photo of Naman Narang" height="200"></p>
-<p>Welcome, you have reached the webpage of Naman Narang. </p>
-<h3>Bio and Background</h3>
-<p>I am a Master's student in the <a href="http://www.cse.iitk.ac.in/">Department of Computer Science and Engineering</a> at the <a href="http://www.iitk.ac.in/">Indian Institute of Technology, Kanpur</a>.</p>
-<p><a href="https://naman28.github.io/docs/naman_cv.pdf">[CV]</a> (PDF)
-<!-- <h3>News</h3> -->
+        <h1>Projects</h1>
+<p>I have done following projects.</p>
+<h3><a href="http://nse.pythonanywhere.com/">NSE Data</a></h3>
+<ul>
+<li> In this project I have collected data of National Stock Exchange bulk deals</li>
+<li> I have applied filter for Date, sell/buy , Security Name, Client Name.</li>
+<!-- <li><a href="https://www.cse.iitk.ac.in/users/smuduli/">Sujit Kumar Muduli</a></li>
+<li>Gourav Takhar</li>
+<li><a href="https://www.cse.iitk.ac.in/users/arunjain/">Arun Jain</a></li>
+<li><a href="https://www.cse.iitk.ac.in/users/sumitl/">Sumit Lahiri</a></li> -->
+</ul>
+<!-- <h3>MS</h3>
+<ul>
+<li><a href="https://babuiroy02.wixsite.com/nirjharroyiitk2018">Nirjhar Roy</a></li>
+</ul>
+<h3>M.Tech</h3>
+<ul>
+<li>Bidya Sarkar</li>
+<li>Krishna Kumar Tayal</li>
+<li>Mayank Rawat</li>
+<li>Mohit Malhotra</li>
+<li>Supriya Suresh</li>
+</ul>
+<h1>Alumni</h1>
+<h3>M.Tech</h3>
+<ul>
+<li><a href="https://cse.iitk.ac.in/users/dsirone/">Deepak Sirone</a> graduated June 2019. First position: Ph.D. student at <a href="https://www.wisc.edu/">UW-Madison</a>.</li>
+<li><a href="https://cse.iitk.ac.in/users/ayushiagg/">Ayushi Agrawal</a> (primary advisor: <a href="https://www.cse.iitk.ac.in/users/sandeeps/">Sandeep Shukla</a>) graduated June 2019. First position: <a href="https://www.flipkart.com/">Flipkart</a>.</li>
+</ul>
     </section>
-</article>
+</article> -->
 
-<!-- Footer -->
+<!-- Footer
     <footer>
         <p>
-            <!-- Blog powered by <a href="http://getpelican.com/">Pelican</a>, -->
-            <!-- which takes great advantage of <a href="http://python.org/">Python</a>. -->
-            <!-- Theme <a href="https://github.com/parbhat/pelican-blue">Pelican-Blue</a> by <a href="https://parbhatpuri.com/">@parbhat</a>. -->
+            Blog powered by <a href="http://getpelican.com/">Pelican</a>,
+            which takes great advantage of <a href="http://python.org/">Python</a>.
+            Theme <a href="https://github.com/parbhat/pelican-blue">Pelican-Blue</a> by <a href="https://parbhatpuri.com/">@parbhat</a>.
         </p>
-    </footer>
+    </footer> -->
 
 
 
