--- a/pages/projects.html
+++ b/pages/projects.html
@@ -68,7 +68,7 @@
         <meta name="description" content="">
         <meta name="author" content="Naman">
 
-        <link rel="shortcut icon" href="https://naman28.github.iopages/projects.html">
+        <link rel="shortcut icon" href="https://naman28.github.io/pages/projects.html">
 
         <!-- schema.org -->
         <meta itemprop="name" content="Naman&#39;s Webpage ">
@@ -101,14 +101,14 @@
 
 
                 <li><a class="nav__link" href="https://naman28.github.io">About</a></li>
-                <li><a class="nav__link" href="https://naman28.github.iopages/projects.html">Projects</a></li>
-                <!-- <li><a class="nav__link" href="https://naman28.github.iopages/contact.html">Contact</a></li>
-                <li><a class="nav__link" href="https://naman28.github.iopages/funding.html">Funding</a></li>
-                <li><a class="nav__link" href="https://naman28.github.iopages/publications.html">Publications</a></li>
-                <li><a class="nav__link" href="https://naman28.github.iopages/research.html">Research</a></li>
-                <li><a class="nav__link" href="https://naman28.github.iopages/students.html">Students</a></li>
-                <li><a class="nav__link" href="https://naman28.github.iopages/talks.html">Talks</a></li>
-                <li><a class="nav__link" href="https://naman28.github.iopages/teaching.html">Teaching</a></li> -->
+                <li><a class="nav__link" href="https://naman28.github.io/pages/projects.html">Projects</a></li>
+                <!-- <li><a class="nav__link" href="https://naman28.github.io/pages/contact.html">Contact</a></li>
+                <li><a class="nav__link" href="https://naman28.github.io/pages/funding.html">Funding</a></li>
+                <li><a class="nav__link" href="https://naman28.github.io/pages/publications.html">Publications</a></li>
+                <li><a class="nav__link" href="https://naman28.github.io/pages/research.html">Research</a></li>
+                <li><a class="nav__link" href="https://naman28.github.io/pages/students.html">Students</a></li>
+                <li><a class="nav__link" href="https://naman28.github.io/pages/talks.html">Talks</a></li>
+                <li><a class="nav__link" href="https://naman28.github.io/pages/teaching.html">Teaching</a></li> -->
 
         </ul>
     </nav>
@@ -157,8 +157,8 @@
 <li><a href="https://cse.iitk.ac.in/users/dsirone/">Deepak Sirone</a> graduated June 2019. First position: Ph.D. student at <a href="https://www.wisc.edu/">UW-Madison</a>.</li>
 <li><a href="https://cse.iitk.ac.in/users/ayushiagg/">Ayushi Agrawal</a> (primary advisor: <a href="https://www.cse.iitk.ac.in/users/sandeeps/">Sandeep Shukla</a>) graduated June 2019. First position: <a href="https://www.flipkart.com/">Flipkart</a>.</li>
 </ul>
-    </section>
-</article> -->
+    </section>-->
+</article> 
 
 <!-- Footer
     <footer>
