--- a/pages/projects.html
+++ b/pages/projects.html
@@ -75,10 +75,10 @@
         <meta itemprop="image" content="">
         <meta itemprop="description" content="">
 
-        <link href="./../About_files/css" rel="stylesheet" type="text/css">
+        <link href="https://naman28.github.io/About_files/css" rel="stylesheet" type="text/css">
         <!-- Style Meta Data -->
-        <link rel="stylesheet" href="./../About_files/style.css" type="text/css">
-        <link rel="stylesheet" href="./../About_files/pygments.css" type="text/css">
+        <link rel="stylesheet" href="https://naman28.github.io/About_files/style.css" type="text/css">
+        <link rel="stylesheet" href="https://naman28.github.io/About_files/pygments.css" type="text/css">
 
         <!-- Feed Meta Data -->
 
