--- a/pages/projects.html
+++ b/pages/projects.html
@@ -75,10 +75,10 @@
         <meta itemprop="image" content="">
         <meta itemprop="description" content="">
 
-        <link href="https://naman28.github.io/About_files/css" rel="stylesheet" type="text/css">
+        <link href="./../About_files/css" rel="stylesheet" type="text/css">
         <!-- Style Meta Data -->
-        <link rel="stylesheet" href="https://naman28.github.io/About_files/style.css" type="text/css">
-        <link rel="stylesheet" href="https://naman28.github.io/About_files/pygments.css" type="text/css">
+        <link rel="stylesheet" href="./../About_files/style.css" type="text/css">
+        <link rel="stylesheet" href="./../About_files/pygments.css" type="text/css">
 
         <!-- Feed Meta Data -->
 
@@ -116,10 +116,6 @@
     <p class="social">
     </p>
 
-        <!-- <h2>Categories</h2>
-        <ul class="navbar">
-                <li><a href="https://naman28.github.iocategory/blog.html">Blog</a></li>
-        </ul> -->
 
 
 </aside>
@@ -134,41 +130,6 @@
 <ul>
 <li> In this project I have collected data of National Stock Exchange bulk deals</li>
 <li> I have applied filter for Date, sell/buy , Security Name, Client Name.</li>
-<!-- <li><a href="https://www.cse.iitk.ac.in/users/smuduli/">Sujit Kumar Muduli</a></li>
-<li>Gourav Takhar</li>
-<li><a href="https://www.cse.iitk.ac.in/users/arunjain/">Arun Jain</a></li>
-<li><a href="https://www.cse.iitk.ac.in/users/sumitl/">Sumit Lahiri</a></li> -->
 </ul>
-<!-- <h3>MS</h3>
-<ul>
-<li><a href="https://babuiroy02.wixsite.com/nirjharroyiitk2018">Nirjhar Roy</a></li>
-</ul>
-<h3>M.Tech</h3>
-<ul>
-<li>Bidya Sarkar</li>
-<li>Krishna Kumar Tayal</li>
-<li>Mayank Rawat</li>
-<li>Mohit Malhotra</li>
-<li>Supriya Suresh</li>
-</ul>
-<h1>Alumni</h1>
-<h3>M.Tech</h3>
-<ul>
-<li><a href="https://cse.iitk.ac.in/users/dsirone/">Deepak Sirone</a> graduated June 2019. First position: Ph.D. student at <a href="https://www.wisc.edu/">UW-Madison</a>.</li>
-<li><a href="https://cse.iitk.ac.in/users/ayushiagg/">Ayushi Agrawal</a> (primary advisor: <a href="https://www.cse.iitk.ac.in/users/sandeeps/">Sandeep Shukla</a>) graduated June 2019. First position: <a href="https://www.flipkart.com/">Flipkart</a>.</li>
-</ul>
-    </section>-->
-</article> 
-
-<!-- Footer
-    <footer>
-        <p>
-            Blog powered by <a href="http://getpelican.com/">Pelican</a>,
-            which takes great advantage of <a href="http://python.org/">Python</a>.
-            Theme <a href="https://github.com/parbhat/pelican-blue">Pelican-Blue</a> by <a href="https://parbhatpuri.com/">@parbhat</a>.
-        </p>
-    </footer> -->
-
-
 
 </body></html>
