--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
                 <li><a class="nav__link" href="https://naman28.github.io/">About</a></li>
-                <li><a class="nav__link" href="https://naman28.github.io/pages/projects.html">Projects</a></li>
+<!--                 <li><a class="nav__link" href="https://naman28.github.io/pages/projects.html">Projects</a></li> -->
                 <!-- <li><a class="nav__link" href="https://naman28.github.io/pages/contact.html">Contact</a></li>
                 <li><a class="nav__link" href="https://naman28.github.io/pages/funding.html">Funding</a></li>
                 <li><a class="nav__link" href="https://naman28.github.io/pages/publications.html">Publications</a></li>
