--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <p><img style="float:right" src="./About_files/naman.png" alt="Photo of Naman Narang" height="200"></p>
 <p>Welcome, you have reached the webpage of Naman Narang. </p>
 <h3>Bio and Background</h3>
-<p>I am a Master's student in the <a href="http://www.cse.iitk.ac.in/">Department of Computer Science and Engineering</a> at the <a href="http://www.iitk.ac.in/">Indian Institute of Technology, Kanpur</a>.</p>
+<p> I have completed my Master's in Technology from <a href="http://www.cse.iitk.ac.in/">Department of Computer Science and Engineering</a>at the <a href="http://www.iitk.ac.in/">Indian Institute of Technology, Kanpur</a>. where I was advised by Professor <a href="https://www.cse.iitk.ac.in/users/nsrivast/"> Nisheeth Srivastava.</p>
 <p><a href="https://naman28.github.io/docs/naman_cv.pdf">[CV]</a> (PDF)
 <!-- <h3>News</h3> -->
     </section>
