--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 })('__REQUESTLY__')</script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <!-- Site Meta Data -->
-        <title>About</title>
+        <title>Naman's Website</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="Naman">
@@ -132,7 +132,8 @@
 <p><img style="float:right" src="./About_files/naman.png" alt="Photo of Naman Narang" height="200"></p>
 <p>Welcome, you have reached the webpage of Naman Narang. </p>
 <h3>Bio and Background</h3>
-<p> I have completed my Master's in Technology from <a href="http://www.cse.iitk.ac.in/">Department of Computer Science and Engineering</a>at the <a href="http://www.iitk.ac.in/">Indian Institute of Technology, Kanpur</a>. where I was advised by Professor <a href="https://www.cse.iitk.ac.in/users/nsrivast/"> Nisheeth Srivastava.</p>
+<p>I am currently working at <a href="https://www.cisco.com/">CISCO</a> as a Software Engineer.</p>
+<p> I have completed my Master's in Technology from <a href="http://www.cse.iitk.ac.in/">Department of Computer Science and Engineering</a> at the <a href="http://www.iitk.ac.in/">Indian Institute of Technology, Kanpur</a> where I was advised by Professor <a href="https://www.cse.iitk.ac.in/users/nsrivast/"> Nisheeth Srivastava</a>.</p>
 <p><a href="https://naman28.github.io/docs/naman_cv.pdf">[CV]</a> (PDF)
 <!-- <h3>News</h3> -->
     </section>
