--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <h3>Bio and Background</h3>
 <p>I am currently working at <a href="https://www.cisco.com/">CISCO</a> as a Software Engineer.</p>
 <p> I have completed my Master's in Technology from <a href="http://www.cse.iitk.ac.in/">Department of Computer Science and Engineering</a> at the <a href="http://www.iitk.ac.in/">Indian Institute of Technology, Kanpur</a> where I was advised by Professor <a href="https://www.cse.iitk.ac.in/users/nsrivast/"> Nisheeth Srivastava</a>.</p>
-<p><a href="https://naman28.github.io/docs/naman_cv.pdf">[CV]</a> (PDF)
+<p><a href="https://naman28.github.io/docs/naman_cv.pdf">[CV]</a> (PDF) </p>
 <!-- <h3>News</h3> -->
     </section>
 </article>
