--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <section id="content" class="body">
 
         <h1>Naman's Homepage</h1>
-<p><img style="float:right" src="./About_files/naman.png" alt="Photo of Naman Narang" height="200"></p>
+<p><img style="float:right" src="./About_files/naman.jpg" alt="Photo of Naman Narang" height="200"></p>
 <p>Welcome, you have reached the webpage of Naman Narang. </p>
 <h3>Bio and Background</h3>
 <p>I am currently working at <a href="https://www.cisco.com/">CISCO</a> as a Software Engineer.</p>
